--- a/index.html
+++ b/index.html
@@ -4,61 +4,78 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Trustiva Market</title>
+<title>Trustiva Enterprise</title>
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-}
+*{margin:0;padding:0;box-sizing:border-box}
 
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
   background:#000;
-  overflow-x:hidden;
   color:white;
+  overflow-x:hidden;
+  scroll-behavior:smooth;
 }
 
-/* VIDEO BACKGROUND */
-video{
+/* ================= BACKGROUND SYSTEM ================= */
+
+.bg{
   position:fixed;
-  top:0;
-  left:0;
   width:100%;
   height:100%;
-  object-fit:cover;
+  background:url("space-bg.jpg") center/cover no-repeat;
+  z-index:-3;
+  transform:scale(1.1);
+}
+
+.glow{
+  position:fixed;
+  width:100%;
+  height:100%;
+  background:radial-gradient(circle at 50% 40%, rgba(0,255,255,0.15), transparent 60%);
   z-index:-2;
 }
 
-/* DARK OVERLAY */
 .overlay{
   position:fixed;
-  top:0;
-  left:0;
   width:100%;
   height:100%;
-  background:radial-gradient(circle at center, rgba(0,0,0,0.2), #000 80%);
+  background:linear-gradient(to bottom, rgba(0,0,0,0.3), #000 90%);
   z-index:-1;
 }
 
-/* STAR PARTICLES */
-.stars{
+/* ================= NAVBAR ================= */
+
+.navbar{
   position:fixed;
+  top:0;
   width:100%;
-  height:100%;
-  background:url("https://www.transparenttextures.com/patterns/stardust.png");
-  animation:moveStars 60s linear infinite;
-  z-index:-1;
-  opacity:0.4;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:20px 40px;
+  backdrop-filter:blur(20px);
+  background:rgba(0,0,0,0.4);
+  z-index:100;
 }
 
-@keyframes moveStars{
-  from{background-position:0 0;}
-  to{background-position:0 1000px;}
+.navbar h2{
+  background:linear-gradient(90deg,#00f2ff,#a855f7);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-/* HERO SECTION */
+.navbar button{
+  padding:10px 25px;
+  border-radius:30px;
+  border:none;
+  background:linear-gradient(90deg,#00f2ff,#a855f7);
+  color:white;
+  cursor:pointer;
+}
+
+/* ================= HERO ================= */
+
 .hero{
   min-height:100vh;
   display:flex;
@@ -66,172 +83,221 @@ video{
   justify-content:center;
   align-items:center;
   text-align:center;
-  padding:20px;
+  padding:120px 20px 20px;
 }
 
 .hero h1{
-  font-size:clamp(2rem,6vw,4rem);
+  font-size:clamp(2.5rem,6vw,4.5rem);
+  max-width:900px;
   background:linear-gradient(90deg,#00f2ff,#a855f7);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  text-shadow:0 0 30px rgba(0,255,255,0.6);
-  animation:fadeUp 1.5s ease forwards;
 }
 
 .hero p{
   margin-top:20px;
   font-size:1.2rem;
   opacity:0.8;
-  animation:fadeUp 2s ease forwards;
+  max-width:600px;
 }
 
-/* BUTTON */
 .cta{
-  margin-top:30px;
-  padding:15px 40px;
-  border:none;
+  margin-top:40px;
+  padding:18px 60px;
   border-radius:50px;
+  border:none;
+  font-size:1.1rem;
   background:linear-gradient(90deg,#00f2ff,#a855f7);
   color:white;
-  font-size:1.1rem;
   cursor:pointer;
-  box-shadow:0 0 40px rgba(0,255,255,0.6);
+  box-shadow:0 0 40px rgba(0,255,255,0.4);
   transition:0.3s;
 }
 
 .cta:hover{
-  transform:scale(1.1);
-  box-shadow:0 0 60px rgba(0,255,255,0.9);
+  transform:translateY(-4px);
+  box-shadow:0 0 80px rgba(0,255,255,0.8);
 }
 
-/* ROCKET */
-.rocket{
-  position:absolute;
-  bottom:40px;
-  width:120px;
-  animation:floatRocket 4s ease-in-out infinite;
-}
+/* ================= SECTIONS ================= */
 
-@keyframes floatRocket{
-  0%{transform:translateY(0);}
-  50%{transform:translateY(-20px);}
-  100%{transform:translateY(0);}
-}
-
-/* SECTION STYLING */
-section{
-  padding:100px 20px;
+.section{
+  padding:160px 40px;
   text-align:center;
 }
 
-.section-title{
-  font-size:2rem;
-  margin-bottom:40px;
+.section h2{
+  font-size:2.8rem;
+  margin-bottom:60px;
   background:linear-gradient(90deg,#00f2ff,#a855f7);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
 }
 
-/* CARD GRID */
+/* ================= CARDS ================= */
+
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:30px;
-  max-width:1000px;
+  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+  gap:40px;
+  max-width:1200px;
   margin:auto;
 }
 
 .card{
+  padding:60px;
+  border-radius:30px;
   background:rgba(255,255,255,0.05);
-  padding:30px;
-  border-radius:20px;
-  backdrop-filter:blur(10px);
-  transition:0.3s;
+  backdrop-filter:blur(30px);
+  border:1px solid rgba(255,255,255,0.08);
+  transition:0.4s ease;
 }
 
 .card:hover{
-  transform:translateY(-10px);
-  box-shadow:0 0 30px rgba(0,255,255,0.5);
+  transform:translateY(-10px) scale(1.03);
+  box-shadow:0 0 60px rgba(0,255,255,0.4);
 }
 
-/* FADE ANIMATION */
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(40px);}
-  to{opacity:1;transform:translateY(0);}
+/* ================= PRICING ================= */
+
+.pricing{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:40px;
+  max-width:1000px;
+  margin:auto;
 }
 
-/* FOOTER */
+.price-card{
+  padding:60px;
+  border-radius:30px;
+  background:rgba(255,255,255,0.04);
+  backdrop-filter:blur(25px);
+  border:1px solid rgba(255,255,255,0.1);
+  transition:0.4s;
+}
+
+.price-card.highlight{
+  border:1px solid #00f2ff;
+  box-shadow:0 0 50px rgba(0,255,255,0.5);
+}
+
+.price-card:hover{
+  transform:scale(1.05);
+}
+
+/* ================= FOOTER ================= */
+
 footer{
-  padding:40px;
+  padding:60px;
   text-align:center;
-  opacity:0.6;
+  opacity:0.5;
+}
+
+/* ================= REVEAL ANIMATION ================= */
+
+.reveal{
+  opacity:0;
+  transform:translateY(40px);
+  transition:1s ease;
+}
+
+.reveal.active{
+  opacity:1;
+  transform:translateY(0);
+}
+
+@media(max-width:768px){
+  .navbar{padding:15px 20px}
 }
 </style>
 </head>
 
 <body>
 
-<!-- VIDEO -->
-<video autoplay muted loop playsinline preload="auto">
-  <source src="space-video.mp4" type="video/mp4">
-</video>
-
+<div class="bg"></div>
+<div class="glow"></div>
 <div class="overlay"></div>
-<div class="stars"></div>
+
+<!-- NAVBAR -->
+<div class="navbar">
+  <h2>Trustiva</h2>
+  <button>Get Started</button>
+</div>
 
 <!-- HERO -->
-<section class="hero">
-  <h1>Your Business Deserves The Universe</h1>
-  <p>Speed. Power. Precision.</p>
-  <button class="cta">🚀 Enter Mission</button>
-  <img src="rocket.png" class="rocket">
+<section class="hero reveal">
+  <h1>Enterprise-Grade Digital Experiences</h1>
+  <p>We engineer high-performance platforms designed to scale globally.</p>
+  <button class="cta">Launch Your Project</button>
 </section>
 
 <!-- SERVICES -->
-<section>
-  <h2 class="section-title">Mission Control</h2>
+<section class="section reveal">
+  <h2>Core Capabilities</h2>
   <div class="grid">
     <div class="card">
-      <h3>Frontend Planet</h3>
-      <p>Stunning UI with smooth animations.</p>
+      <h3>Full Stack Architecture</h3>
+      <p>Secure, scalable, production-ready systems.</p>
     </div>
     <div class="card">
-      <h3>Backend Planet</h3>
-      <p>Secure, scalable server architecture.</p>
+      <h3>Conversion Engineering</h3>
+      <p>Data-driven design that maximizes revenue.</p>
     </div>
     <div class="card">
-      <h3>E-commerce Galaxy</h3>
-      <p>Payment gateways & conversion optimization.</p>
-    </div>
-    <div class="card">
-      <h3>SEO Engine Core</h3>
-      <p>Rank higher. Dominate search results.</p>
+      <h3>Global Infrastructure</h3>
+      <p>Optimized performance worldwide.</p>
     </div>
   </div>
 </section>
 
 <!-- PRICING -->
-<section>
-  <h2 class="section-title">Choose Your Rocket</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Starter Rocket</h3>
-      <p>₹9,999</p>
+<section class="section reveal">
+  <h2>Investment Plans</h2>
+  <div class="pricing">
+    <div class="price-card">
+      <h3>Foundation</h3>
+      <p>₹49,999</p>
     </div>
-    <div class="card">
-      <h3>Growth Rocket</h3>
-      <p>₹24,999</p>
+    <div class="price-card highlight">
+      <h3>Growth</h3>
+      <p>₹1,49,999</p>
     </div>
-    <div class="card">
-      <h3>Enterprise Rocket</h3>
-      <p>Custom Pricing</p>
+    <div class="price-card">
+      <h3>Enterprise</h3>
+      <p>Custom</p>
     </div>
   </div>
 </section>
 
 <footer>
-  © 2026 Trustiva Market. All Rights Reserved.
+  © 2026 Trustiva Enterprise. All Rights Reserved.
 </footer>
+
+<script>
+
+/* Scroll Reveal */
+const observer=new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("active");
+    }
+  });
+},{threshold:0.2});
+
+document.querySelectorAll(".reveal").forEach(el=>{
+  observer.observe(el);
+});
+
+/* Smooth Parallax */
+document.addEventListener("mousemove",e=>{
+  const bg=document.querySelector(".bg");
+  let x=(e.clientX/window.innerWidth -0.5)*15;
+  let y=(e.clientY/window.innerHeight -0.5)*15;
+  bg.style.transform=`scale(1.1) translate(${x}px,${y}px)`;
+});
+
+</script>
 
 </body>
 </html>
