--- a/index.html
+++ b/index.html
@@ -4,299 +4,236 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Trustiva Enterprise</title>
+<title>Trustiva Market</title>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+body{background:#000;color:white;overflow-x:hidden;}
 
-body{
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
-  background:#000;
-  color:white;
-  overflow-x:hidden;
-  scroll-behavior:smooth;
-}
-
-/* ================= BACKGROUND SYSTEM ================= */
-
-.bg{
-  position:fixed;
-  width:100%;
-  height:100%;
-  background:url("space-bg.jpg") center/cover no-repeat;
-  z-index:-3;
-  transform:scale(1.1);
-}
-
-.glow{
-  position:fixed;
-  width:100%;
-  height:100%;
-  background:radial-gradient(circle at 50% 40%, rgba(0,255,255,0.15), transparent 60%);
-  z-index:-2;
-}
-
-.overlay{
-  position:fixed;
-  width:100%;
-  height:100%;
-  background:linear-gradient(to bottom, rgba(0,0,0,0.3), #000 90%);
-  z-index:-1;
-}
-
-/* ================= NAVBAR ================= */
-
+/* NAVBAR */
 .navbar{
-  position:fixed;
-  top:0;
-  width:100%;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:20px 40px;
-  backdrop-filter:blur(20px);
-  background:rgba(0,0,0,0.4);
-  z-index:100;
+position:fixed;top:0;width:100%;
+display:flex;justify-content:space-between;align-items:center;
+padding:20px 40px;background:rgba(0,0,0,0.4);
+backdrop-filter:blur(10px);z-index:100;
 }
+.nav-logo{font-weight:600;letter-spacing:3px;}
+.nav-links{display:flex;gap:30px;font-size:13px;letter-spacing:2px;}
+.nav-links a{color:white;text-decoration:none;opacity:0.7;}
+.nav-links a:hover{opacity:1;}
 
-.navbar h2{
-  background:linear-gradient(90deg,#00f2ff,#a855f7);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-}
-
-.navbar button{
-  padding:10px 25px;
-  border-radius:30px;
-  border:none;
-  background:linear-gradient(90deg,#00f2ff,#a855f7);
-  color:white;
-  cursor:pointer;
-}
-
-/* ================= HERO ================= */
-
+/* HERO */
 .hero{
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  text-align:center;
-  padding:120px 20px 20px;
+height:100vh;display:flex;justify-content:center;align-items:center;
+text-align:center;background:url("space.jpg") center/cover no-repeat;
+position:relative;overflow:hidden;
 }
+.overlay{position:absolute;inset:0;background:linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0.95));}
+.hero-content{position:relative;z-index:5;max-width:900px;padding:20px;}
 
-.hero h1{
-  font-size:clamp(2.5rem,6vw,4.5rem);
-  max-width:900px;
-  background:linear-gradient(90deg,#00f2ff,#a855f7);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-}
-
-.hero p{
-  margin-top:20px;
-  font-size:1.2rem;
-  opacity:0.8;
-  max-width:600px;
-}
-
+.scramble{font-size:clamp(32px,6vw,70px);letter-spacing:6px;}
+.subtitle{margin-top:20px;opacity:0;letter-spacing:3px;font-size:14px;}
 .cta{
-  margin-top:40px;
-  padding:18px 60px;
-  border-radius:50px;
-  border:none;
-  font-size:1.1rem;
-  background:linear-gradient(90deg,#00f2ff,#a855f7);
-  color:white;
-  cursor:pointer;
-  box-shadow:0 0 40px rgba(0,255,255,0.4);
-  transition:0.3s;
+margin-top:40px;padding:15px 40px;border-radius:50px;border:none;
+background:linear-gradient(90deg,#00f2ff,#8a2be2);
+color:white;font-size:16px;cursor:pointer;opacity:0;transform:scale(0.8);
 }
 
-.cta:hover{
-  transform:translateY(-4px);
-  box-shadow:0 0 80px rgba(0,255,255,0.8);
+/* SHIPS */
+.ship{position:absolute;width:260px;opacity:0;z-index:2;}
+.ship-left{left:-400px;bottom:18%;}
+.ship-right{right:-400px;top:22%;}
+
+/* SECTIONS */
+section{padding:120px 10%;text-align:center;}
+section h2{
+font-size:36px;margin-bottom:20px;
+background:linear-gradient(90deg,#00f2ff,#8a2be2);
+-webkit-background-clip:text;color:transparent;
 }
+section p{max-width:700px;margin:0 auto 40px;opacity:0.8;line-height:1.6;}
 
-/* ================= SECTIONS ================= */
-
-.section{
-  padding:160px 40px;
-  text-align:center;
+.cards{
+display:flex;flex-wrap:wrap;justify-content:center;gap:40px;
 }
-
-.section h2{
-  font-size:2.8rem;
-  margin-bottom:60px;
-  background:linear-gradient(90deg,#00f2ff,#a855f7);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-}
-
-/* ================= CARDS ================= */
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-  gap:40px;
-  max-width:1200px;
-  margin:auto;
-}
-
 .card{
-  padding:60px;
-  border-radius:30px;
-  background:rgba(255,255,255,0.05);
-  backdrop-filter:blur(30px);
-  border:1px solid rgba(255,255,255,0.08);
-  transition:0.4s ease;
+background:rgba(255,255,255,0.05);
+padding:40px;border-radius:20px;width:260px;
+backdrop-filter:blur(10px);
+transition:0.4s;
 }
-
 .card:hover{
-  transform:translateY(-10px) scale(1.03);
-  box-shadow:0 0 60px rgba(0,255,255,0.4);
+transform:translateY(-15px);
+box-shadow:0 0 40px rgba(0,255,255,0.5);
 }
-
-/* ================= PRICING ================= */
 
 .pricing{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:40px;
-  max-width:1000px;
-  margin:auto;
+display:flex;flex-wrap:wrap;justify-content:center;gap:40px;
 }
-
 .price-card{
-  padding:60px;
-  border-radius:30px;
-  background:rgba(255,255,255,0.04);
-  backdrop-filter:blur(25px);
-  border:1px solid rgba(255,255,255,0.1);
-  transition:0.4s;
+background:rgba(255,255,255,0.05);
+padding:40px;border-radius:20px;width:260px;
+transition:0.4s;
 }
-
-.price-card.highlight{
-  border:1px solid #00f2ff;
-  box-shadow:0 0 50px rgba(0,255,255,0.5);
-}
-
 .price-card:hover{
-  transform:scale(1.05);
+transform:scale(1.05);
+box-shadow:0 0 50px rgba(138,43,226,0.5);
 }
-
-/* ================= FOOTER ================= */
 
 footer{
-  padding:60px;
-  text-align:center;
-  opacity:0.5;
-}
-
-/* ================= REVEAL ANIMATION ================= */
-
-.reveal{
-  opacity:0;
-  transform:translateY(40px);
-  transition:1s ease;
-}
-
-.reveal.active{
-  opacity:1;
-  transform:translateY(0);
+padding:60px;text-align:center;opacity:0.5;
 }
 
 @media(max-width:768px){
-  .navbar{padding:15px 20px}
+.ship{width:140px;}
+.navbar{padding:15px 20px;}
 }
 </style>
 </head>
 
 <body>
 
-<div class="bg"></div>
-<div class="glow"></div>
-<div class="overlay"></div>
-
 <!-- NAVBAR -->
 <div class="navbar">
-  <h2>Trustiva</h2>
-  <button>Get Started</button>
+<div class="nav-logo">TRUSTIVA</div>
+<div class="nav-links">
+<a href="#">MISSION</a>
+<a href="#">SERVICES</a>
+<a href="#">PROJECTS</a>
+<a href="#">CONTACT</a>
+</div>
 </div>
 
 <!-- HERO -->
-<section class="hero reveal">
-  <h1>Enterprise-Grade Digital Experiences</h1>
-  <p>We engineer high-performance platforms designed to scale globally.</p>
-  <button class="cta">Launch Your Project</button>
+<div class="hero">
+<div class="overlay"></div>
+
+<img src="ship-left.png" class="ship ship-left" id="shipLeft">
+<img src="ship-right.png" class="ship ship-right" id="shipRight">
+
+<div class="hero-content">
+<div class="scramble" id="scrambleText">8392JKD92K</div>
+<div class="subtitle" id="subtitle">
+ENGINEERED FOR DIGITAL DOMINANCE
+</div>
+<button class="cta" id="ctaBtn">BEGIN THE MISSION</button>
+</div>
+</div>
+
+<!-- PROBLEM -->
+<section>
+<h2>Most Businesses Drift in Digital Darkness.</h2>
+<p>
+Slow websites. Outdated design. No SEO visibility. No scalability.
+If your digital presence doesn’t evolve, your competition will.
+</p>
 </section>
 
 <!-- SERVICES -->
-<section class="section reveal">
-  <h2>Core Capabilities</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Full Stack Architecture</h3>
-      <p>Secure, scalable, production-ready systems.</p>
-    </div>
-    <div class="card">
-      <h3>Conversion Engineering</h3>
-      <p>Data-driven design that maximizes revenue.</p>
-    </div>
-    <div class="card">
-      <h3>Global Infrastructure</h3>
-      <p>Optimized performance worldwide.</p>
-    </div>
-  </div>
+<section>
+<h2>Mission Control</h2>
+<p>Full Stack Architecture. AI Integration. SEO Engines. E-Commerce Systems.</p>
+
+<div class="cards">
+<div class="card">Frontend Engineering</div>
+<div class="card">Backend Architecture</div>
+<div class="card">AI Integration</div>
+<div class="card">SEO Optimization</div>
+</div>
+</section>
+
+<!-- PORTFOLIO -->
+<section>
+<h2>Launched Into Orbit</h2>
+<p>We don't build websites. We launch digital spacecraft.</p>
+
+<div class="cards">
+<div class="card">Clothing Brand Store</div>
+<div class="card">Electronics Platform</div>
+<div class="card">Luxury Cosmetic Store</div>
+</div>
 </section>
 
 <!-- PRICING -->
-<section class="section reveal">
-  <h2>Investment Plans</h2>
-  <div class="pricing">
-    <div class="price-card">
-      <h3>Foundation</h3>
-      <p>₹49,999</p>
-    </div>
-    <div class="price-card highlight">
-      <h3>Growth</h3>
-      <p>₹1,49,999</p>
-    </div>
-    <div class="price-card">
-      <h3>Enterprise</h3>
-      <p>Custom</p>
-    </div>
-  </div>
+<section>
+<h2>Choose Your Launch Vehicle</h2>
+
+<div class="pricing">
+<div class="price-card">
+<h3>Starter Rocket</h3>
+<p>Perfect for new businesses entering orbit.</p>
+</div>
+
+<div class="price-card">
+<h3>Growth Rocket</h3>
+<p>Advanced systems built for scaling brands.</p>
+</div>
+
+<div class="price-card">
+<h3>Enterprise Fleet</h3>
+<p>Full digital dominance strategy.</p>
+</div>
+</div>
+</section>
+
+<!-- FINAL CTA -->
+<section>
+<h2>Ready For Liftoff?</h2>
+<p>Your digital universe begins today.</p>
+<button class="cta">🚀 START THE MISSION</button>
 </section>
 
 <footer>
-  © 2026 Trustiva Enterprise. All Rights Reserved.
+© 2026 Trustiva Market — Built With Interstellar Precision.
 </footer>
 
 <script>
+gsap.registerPlugin(ScrollTrigger);
 
-/* Scroll Reveal */
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      entry.target.classList.add("active");
-    }
-  });
-},{threshold:0.2});
+/* SCRAMBLE EFFECT */
+const finalText="YOUR DIGITAL UNIVERSE";
+const scrambleEl=document.getElementById("scrambleText");
+let chars="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+let iteration=0;
 
-document.querySelectorAll(".reveal").forEach(el=>{
-  observer.observe(el);
+let interval=setInterval(()=>{
+scrambleEl.innerText=finalText.split("")
+.map((letter,index)=>{
+if(index<iteration){return finalText[index];}
+return chars[Math.floor(Math.random()*chars.length)];
+}).join("");
+
+if(iteration>=finalText.length){
+clearInterval(interval);
+gsap.to("#subtitle",{opacity:1,duration:1});
+gsap.to("#ctaBtn",{opacity:1,scale:1,duration:1,delay:0.3,ease:"back.out(1.7)"});
+}
+iteration+=0.5;
+},40);
+
+/* SHIP ENTRY */
+gsap.to("#shipLeft",{x:450,opacity:1,duration:3,ease:"power3.out"});
+gsap.to("#shipRight",{x:-450,opacity:1,duration:3,delay:0.4,ease:"power3.out"});
+
+/* FLOATING */
+gsap.to("#shipLeft",{y:20,duration:3,repeat:-1,yoyo:true,ease:"sine.inOut"});
+gsap.to("#shipRight",{y:-20,duration:3,repeat:-1,yoyo:true,ease:"sine.inOut"});
+
+/* SCROLL ANIMATIONS */
+gsap.utils.toArray("section").forEach(section=>{
+gsap.from(section,{
+opacity:0,
+y:80,
+duration:1.2,
+scrollTrigger:{
+trigger:section,
+start:"top 80%"
+}
 });
-
-/* Smooth Parallax */
-document.addEventListener("mousemove",e=>{
-  const bg=document.querySelector(".bg");
-  let x=(e.clientX/window.innerWidth -0.5)*15;
-  let y=(e.clientY/window.innerHeight -0.5)*15;
-  bg.style.transform=`scale(1.1) translate(${x}px,${y}px)`;
 });
-
 </script>
 
 </body>
